# IronEngine-3DCreator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SOUL.md  environment.yml  pyproject.toml
.github/workflows/: package-check.yml  publish-pypi.yml
docs/: INSTALL.md  PROJECT_ANALYSIS.md  PYPI_PUBLISHING.md  RELEASE_v0.2.0.md
src/ironengine_3d_creator/: __init__.py  __main__.py  app.py
src/ironengine_3d_creator/alignment/: defaults.py  integrity.py  parser.py  schema.py  validator.py
src/ironengine_3d_creator/core/: exporter.py  pipeline.py  resources.py  secrets.py  session.py  settings.py
src/ironengine_3d_creator/editing/: history.py  ops.py  selection.py
src/ironengine_3d_creator/generation/: code_sandbox.py  colorize.py  compositor.py  features.py  primitives.py  reconstruct.py  sampler.py  textures.py
src/ironengine_3d_creator/llm/: base.py  cloud_anthropic.py  cloud_openai.py  known_models.py  lmstudio.py  ollama.py  prompts.py  registry.py  thinking.py
src/ironengine_3d_creator/rendering/: __init__.py  api.py
src/ironengine_3d_creator/ui/: main_window.py  theme.py  viewport.py  workers.py
src/ironengine_3d_creator/ui/dialogs/: user_guide.py
src/ironengine_3d_creator/ui/panels/: editing_panel.py  llm_config_panel.py  requirements_panel.py  resources_panel.py  spec_preview_panel.py  token_stream_widget.py
src/ironengine_3d_creator/ui/widgets/: animated_panel.py  cyber_button.py  shimmer_progress.py
tools/: benchmark.py
